fixed typo in style

--- a/src/main/webapp/Presentation.html
+++ b/src/main/webapp/Presentation.html
@@ -31,12 +31,12 @@
     }
 
     article li small {
-        color: 3 lighter;
+        opacity: 0.5;
         font-style: italic;
     }
 
-    arcticle.blur video {
-        -webkit-filter: blur(4px);
+    article.blur video {
+        -webkit-filter: blur(14px);
     }
 </style>
 
