added border to video

--- a/src/main/webapp/Presentation.html
+++ b/src/main/webapp/Presentation.html
@@ -35,6 +35,12 @@
         font-style: italic;
     }
 
+    video {
+        width:320px;
+        heigth:180px;
+        border:1px solid black;
+    }
+
     article.blur video {
         -webkit-filter: blur(14px);
     }
