--- a/src/main/webapp/Presentation.html
+++ b/src/main/webapp/Presentation.html
@@ -25,7 +25,7 @@
     /* Your individual styles here, or just use inline styles if that’s
     what you want. */
     .slides.template-default > article:not(.nobackground):not(.biglogo) {
-    background: url(images/devoxx-logo-small.jpg) 690px 545px no-repeat !important;
+    background: url(images/devoxx-logo-small.jpg) 890px 545px no-repeat !important;
 
     background-color: white !important;
     }
@@ -39,11 +39,18 @@
         width:320px;
         heigth:180px;
         border:1px solid black;
+        -webkit-filter: blur(10px);
     }
 
-    article.blur video {
-        -webkit-filter: blur(14px);
+    img.small {
+        width:300px;
     }
+
+    td.big {
+        font-size: 200%;
+        color:blue;
+    }
+
 </style>
 
 <body style='display: none'>
@@ -89,21 +96,84 @@ slides below. -->
     </p>
 </article>
 
-<article class="blur">
-    <video autoplay>video</video>
+<article>
+    <h3>Geek Culture</h3>
+    <ul class="build">
+        <li><strong>Every</strong> Speaker had a MacBookPro</li>
+        <li>Most of the developers too</li>
+        <li>Most used IntelliJ IDE</li>
+        <li>Most Presentations were made in HTML5</li>
+    </ul>
+</article>
 
+<article>
+    <h3>Geek Culture - when geeks leak</h3>
+    <table>
+        <tr>
+            <td><img class="small" src="images/big-mac.jpeg"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
+</article>
+<article>
+    <h3>Geek Culture - when geeks leak</h3>
+    <table>
+        <tr>
+            <td><img class="small" src="images/big-mac.jpeg"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td><img class="small" src="images/big-mac-2.jpeg"></td>
+        </tr>
+    </table>
+</article>
+<article>
+    <h3>Geek Culture - when geeks leak</h3>
+    <table>
+        <tr>
+            <td><img class="small" src="images/big-mac.jpeg"></td>
+            <td class="big"> &lt;- Class</td>
+        </tr>
+        <tr>
+            <td class="big">Instance -&gt; </td>
+            <td><img class="small" src="images/big-mac-2.jpeg"></td>
+        </tr>
+    </table>
+</article>
+
+
+<article>
+    <video autoplay>video</video>
+    <section>
+        <pre>
+video {
+    width:320px;
+    heigth:180px;
+    border:1px solid black;
+    -webkit-filter: blur(10px);
+}</pre>
+    </section>
+    <section>
+        <pre>
+navigator.webkitGetUserMedia({video: true, audio: false}, function(localMediaStream) {
+    var video = document.querySelector('video');
+    video.src = window.URL.createObjectURL(localMediaStream);
+});</pre>
+    </section>
     <script>
         var onFail = function(e) {
             console.log('Rejected!', e);
         };
 
-        // Not showing vendor prefixes.
         navigator.webkitGetUserMedia({video: true, audio: false}, function(localMediaStream) {
             var video = document.querySelector('video');
             video.src = window.URL.createObjectURL(localMediaStream);
 
-            // Note: onloadedmetadata doesn't fire in Chrome when using it with getUserMedia.
-            // See crbug.com/110938.
             video.onloadedmetadata = function(e) {
                 // Ready to go. Do some stuff.
             };
