--- a/src/main/webapp/Presentation.html
+++ b/src/main/webapp/Presentation.html
@@ -51,6 +51,21 @@
         color:blue;
     }
 
+    h1 {
+        background-color: #cccccc;
+        position: relative !important;
+        left: -100px !important;
+        padding:20px 0px 20px 100px !important;
+
+    }
+
+    h3 {
+        background-color: #cccccc;
+        position: relative !important;
+        left: -100px !important;
+        padding: 10px 0px 10px 100px !important;
+    }
+
 </style>
 
 <body style='display: none'>
@@ -134,7 +149,7 @@ slides below. -->
 </article>
 <article>
     <h3>Geek Culture - when geeks leak</h3>
-    <table>
+    <table class="build">
         <tr>
             <td><img class="small" src="images/big-mac.jpeg"></td>
             <td class="big"> &lt;- Class</td>
@@ -181,276 +196,141 @@ navigator.webkitGetUserMedia({video: true, audio: false}, function(localMediaStr
     </script>
 </article>
 
-<article>
+<article class="smaller">
     <h3>
-        Slide with bullet points and a longer title, just because we
-        can make it longer
+        Arquillian
     </h3>
-    <ul>
-        <li>
-            Use this template to create your presentation
-        </li>
-        <li>
-            Use the provided color palette, box and arrow graphics, and
-            chart styles
-        </li>
-        <li>
-            Instructions are provided to assist you in using this
-            presentation template effectively
-        </li>
-        <li>
-            At all times strive to maintain Google's corporate look and feel
-        </li>
-    </ul>
+    <h5>Integration test framework</h5>
+    <p>run from maven, debugging your integration tests</p>
+    <section>
+        <pre>
+@RunWith(Arquillian.class)
+public class BasicClientTest {
+    @Deployment(testable = false)
+    public static WebArchive createDeployment() {
+        return ShrinkWrap.create(WebArchive.class)
+            .addClasses(MyBean.class)
+            .setWebXML("WEB-INF/web.xml");
+    }
+
+    @Test
+    public void should_login_successfully() {
+        ...
+    }
+}
+        </pre>
+    </section>
 </article>
+
+<article class="smaller">
+    <h3>Arquillian - Selenium</h3>
+    <section>
+        <pre>
+@Drone DefaultSelenium browser;
+@ArquillianResource URL deploymentUrl;
+
+@Test
+public void should_login_successfully() {
+    browser.open(deploymentUrl + "login.jsp");
+    browser.type("id=loginForm:username", "demo");
+    browser.type("id=loginForm:password", "demo");
+    browser.click("id=loginForm:login")
+    browser.waitForPageToLoad("15000");
+
+    Assert.assertTrue("User should be logged in!",
+        browser.isElementPresent("xpath=//li[contains(text(), 'Welcome')]"));
+}
+        </pre>
+    </section>
+    <section>
+        <pre>
+&lt;extension qualifier="selenium">
+    &lt;property name="browser">*googlechrome&lt;/property>
+&lt;/extension>
+        </pre>
+    </section>
+</article>
+
+
 
 <article>
     <h3>
-        Slide with bullet points that builds
+       new Java API's
     </h3>
     <ul class="build">
         <li>
-            This is an example of a list
-        </li>
+            JSR 353: Java API for JSON Parser
         <li>
-            The list items fade in
-        </li>
+        Stream based, like the StAX Parser
+        <br>register to Events to handle objects as they come in<br>
+        Will probably in JavaEE 7
         <li>
-            Last one!
-        </li>
-    </ul>
-
-    <div class="build">
-        <p>Any element with child nodes can build.</p>
-        <p>It doesn't have to be a list.</p>
-    </div>
-</article>
-
-<article class='smaller'>
-    <h3>
-        Slide with bullet points (small font)
-    </h3>
-    <ul>
+            JSR 356: Java API for websocket
         <li>
-            Use this template to create your presentation
-        <li>
-            Use the provided color palette, box and arrow graphics, and
-            chart styles
-        <li>
-            Instructions are provided to assist you in using this
-            presentation template effectively
-        <li>
-            At all times strive to maintain Google's corporate look and feel
+            Simple protocol to send/receive text/binary, some async support
+            works by opening a standard http connection and then upgrade to websocket<br>
+            will be in JavaEE 7
     </ul>
 </article>
 
 <article>
-    <h3>
-        Slide with a table
-    </h3>
-
-    <table>
-        <tr>
-            <th>
-                Name
-            <th>
-                Occupation
-                <tr>
-                    <td>
-                        Luke Mahé
-                    <td>
-                        V.P. of Keepin’ It Real
-        <tr>
-            <td>
-                Marcin Wichary
-            <td>
-                The Michael Bay of Doodles
-    </table>
-</article>
-
-<article class='smaller'>
-    <h3>
-        Slide with a table (smaller text)
-    </h3>
-
-    <table>
-        <tr>
-            <th>
-                Name
-            <th>
-                Occupation
-                <tr>
-                    <td>
-                        Luke Mahé
-                    <td>
-                        V.P. of Keepin’ It Real
-        <tr>
-            <td>
-                Marcin Wichary
-            <td>
-                The Michael Bay of Doodles
-    </table>
-</article>
-
-<article>
-    <h3>
-        Styles
-    </h3>
-    <ul>
-        <li>
-            <span class='red'>class="red"</span>
-        <li>
-            <span class='blue'>class="blue"</span>
-        <li>
-            <span class='green'>class="green"</span>
-        <li>
-            <span class='yellow'>class="yellow"</span>
-        <li>
-            <span class='black'>class="black"</span>
-        <li>
-            <span class='white'>class="white"</span>
-        <li>
-            <b>bold</b> and <i>italic</i>
-    </ul>
-</article>
-
-<article>
-    <h2>
-        Segue slide
-    </h2>
-</article>
-
-<article>
-    <h3>
-        Slide with an image
-    </h3>
-    <p>
-        <img style='height: 500px' src='images/example-graph.png'>
-    </p>
-    <div class='source'>
-        Source: Sergey Brin
-    </div>
-</article>
-
-<article>
-    <h3>
-        Slide with an image (centered)
-    </h3>
-    <p>
-        <img class='centered' style='height: 500px' src='images/example-graph.png'>
-    </p>
-    <div class='source'>
-        Source: Larry Page
-    </div>
-</article>
-
-<article class='fill'>
-    <h3>
-        Image filling the slide (with optional header)
-    </h3>
-    <p>
-        <img src='images/example-cat.jpg'>
-    </p>
-    <div class='source white'>
-        Source: Eric Schmidt
-    </div>
-</article>
-
-<article>
-    <h3>
-        This slide has some code
-    </h3>
+    <h3>Lambda's, (parallel) collections</h3>
+    <h5>Java (JDK 8)</h5>
     <section>
         <pre>
-&lt;script type='text/javascript'&gt;
-  // Say hello world until the user starts questioning
-  // the meaningfulness of their existence.
-  function helloWorld(world) {
-    for (var i = 42; --i &gt;= 0;) {
-      alert('Hello ' + String(world));
-    }
-  }
-&lt;/script&gt;
-&lt;style&gt;
-  p { color: pink }
-  b { color: blue }
-  u { color: 'umber' }
-&lt;/style&gt;
-</pre>
+(String s1, String s2) -> s1.length() - s2.length();
+        </pre>
     </section>
-</article>
-
-<article class='smaller'>
-    <h3>
-        This slide has some code (small font)
-    </h3>
+    <h5>Scala (now)</h5>
     <section>
         <pre>
-&lt;script type='text/javascript'&gt;
-  // Say hello world until the user starts questioning
-  // the meaningfulness of their existence.
-  function helloWorld(world) {
-    for (var i = 42; --i &gt;= 0;) {
-      alert('Hello ' + String(world));
-    }
-  }
-&lt;/script&gt;
-&lt;style&gt;
-  p { color: pink }
-  b { color: blue }
-  u { color: 'umber' }
-&lt;/style&gt;
-</pre>
+        (s1: String, s2: String) => s1.length - s2.length
+        </pre>
     </section>
+    <h4>Ceylon, Kotlin, Clojure have similar constructions</h4>
 </article>
 
-<article>
-    <q>
-        The best way to predict the future is to invent it.
-    </q>
-    <div class='author'>
-        Alan Kay
-    </div>
-</article>
-
-<article class='smaller'>
-    <q>
-        A distributed system is one in which the failure of a computer
-        you didn’t even know existed can render your own computer unusable.
-    </q>
-    <div class='author'>
-        Leslie Lamport
-    </div>
-</article>
-
-<article class='nobackground'>
-    <h3>
-        A slide with an embed + title
-    </h3>
-
-    <iframe src='http://www.google.com/doodle4google/history.html'></iframe>
-</article>
-
-<article class='nobackground'>
-    <iframe src='http://www.google.com/doodle4google/history.html'></iframe>
-</article>
-
-<article class='fill'>
-    <h3>
-        Full-slide embed with (optional) slide title on top
-    </h3>
-    <iframe src='http://www.google.com/doodle4google/history.html'></iframe>
-</article>
 
 <article>
     <h3>
-        Thank you!
+        Elastic Search
     </h3>
-
     <ul>
         <li>
-            <a href='http://www.google.com'>google.com</a>
+            think lucene, but distributed
+        <li>
+            Super easy to setup, communication/data is all JSON
+        <li>
+            Powerfull statistics<br>
+            Use case: 10 shards, 8 billion LOG Events<br>
+            showing, histogram, trends
+        <li>
+
     </ul>
+</article>
+
+<article>
+    <h3>J2ObjC - Java to iOS translation and runtime</h3>
+    <ul>
+        <li>
+            Focus on shareable code, NOT UI!
+        <li>
+
+        <li>
+
+        <li>
+
+        <li>
+
+    </ul>
+</article>
+
+
+
+<article>
+    <h1>
+        Q&A
+    </h1>
 </article>
 
 </section>
