--- a/src/main/webapp/Devoxx2012.html
+++ b/src/main/webapp/Devoxx2012.html
@@ -601,11 +601,21 @@ res59: List[Int] = List(2,4,6,8,10 ....</pre>
     </ul>
 </article>
 
-<article>
+<article class="smaller">
     <h3>Agile++ - Take the pain early</h3>
     <q>If it hurts do it more often.</q>
     <img style="float:right;width:400px;" src="images/graph.png">
-    <small>Martin Fowler</small>
+    Martin Fowler<br>
+    <br>
+    3 Reasons:<br>
+    <ul>
+        <li>
+            Decrease complexity
+        <li>
+            Feedback loops
+        <li>
+            Practise
+    </ul>
 </article>
 
 
