fixed typo in keynotes slide

--- a/src/main/webapp/Devoxx2012.html
+++ b/src/main/webapp/Devoxx2012.html
@@ -172,7 +172,8 @@ gertjan$ git push
 
     <p><img src="images/Oracle2.gif"><br>
         Besides bringing out new versions of Java and JavaFX,<br>
-        Focus is more on embedded world "The Internet of Things", small connected devices
+        Focus is more on embedded world "The Internet of Things"<br>
+        Small connected devices that according to google will make up most of the internet traffic in 20 years time
     </p>
     <p><img src="images/jbosscorp_logo.png"><br>
         JBoss is getting a new name, voted by the community<br>
